@@ -41,6 +41,10 @@ version 2.64
 	    configured with --listen-address. Thanks to
 	    Gene Czarcinski for sorting this out. 
 
+	    Add a "wildcard" dhcp-range which works for any IPv6
+	    subnet, --dhcp-range=::,static Useful for Stateless 
+	    DHCPv6. Thanks to Vladislav Grishenko for the patch.
+
 	    
 version 2.63
             Do duplicate dhcp-host address check in --test mode.
